--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-parallax-tilt": "^1.5.22",
+    "react-particles-js": "^3.4.1",
     "react-scripts": "^1.1.5",
     "tachyons": "^4.12.0",
     "web-vitals": "^1.1.2"
