--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^17.0.2",
     "react-parallax-tilt": "^1.5.22",
     "react-particles-js": "^3.4.1",
-    "react-scripts": "^1.1.5",
+    "react-scripts": "4.0.3",
     "serve": "^12.0.0",
     "tachyons": "^4.12.0",
     "web-vitals": "^1.1.2"
